--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -49,6 +49,7 @@ theme: Tema
 timezone: 'Zona horaria'
 user.confirm.delete: '¿Está seguro de eliminar esta cuenta?'
 user.conflict.username: 'Ya existe una cuenta con ese nombre de usuario.'
+user.invalid.username: 'Nombre de usuario inválido.'
 password.too.short: 'La contraseña debe tener una logintud mínima de %length% caracteres.'
 passwords.dont.match: 'Las contraseñas no coinciden.'
 key.tab: Tab
