--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -49,6 +49,7 @@ theme: Tema
 timezone: Tidszon
 user.confirm.delete: 'Är du säker på att du vill ta bort detta kontot?'
 user.conflict.username: 'Kontot med detta användarnamn finns redan.'
+user.invalid.username: 'Ogiltigt användarnamn.'
 password.too.short: 'Lösenord ska vara minst %length% tecken långt.'
 passwords.dont.match: 'Lösenorden matchar inte.'
 key.tab: Tab
