--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -49,6 +49,7 @@ theme: Тема
 timezone: 'Времева зона'
 user.confirm.delete: 'Сигурен ли сте че искате да изтриете този акаунт?'
 user.conflict.username: 'Акаунт с въведенето потребителско име вече съществува.'
+user.invalid.username: 'Невалидно потребителско име.'
 password.too.short: 'Паролата трябва да е най-малко с %length% символ дължина.'
 passwords.dont.match: 'Паролите не са еднакви.'
 key.tab: Tab
