--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -49,6 +49,7 @@ theme: Vzhled
 timezone: 'Časová zóna'
 user.confirm.delete: 'Jste si jisti, že chcete smazat tento účet?'
 user.conflict.username: 'Účet se zadaným uživatelským jménem již existuje.'
+user.invalid.username: 'Neplatné uživatelské jméno.'
 password.too.short: 'Heslo musí být dlouhé alespoň %length% znaků.'
 passwords.dont.match: 'Hesla se neshodují.'
 key.tab: Tab
