--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -49,6 +49,7 @@ theme: Theme
 timezone: Timezone
 user.confirm.delete: 'Are you sure you want delete this account?'
 user.conflict.username: 'Account with entered user name already exists.'
+user.invalid.username: 'Invalid user name.'
 password.too.short: 'Password should be at least %length% characters length.'
 passwords.dont.match: 'Passwords do not match.'
 key.tab: Tab
