--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -49,6 +49,7 @@ theme: Téma
 timezone: Időzóna
 user.confirm.delete: 'Biztos törölni szeretné a felhasználót?'
 user.conflict.username: 'Már létezik ilyen névvel ellátott felhasználó.'
+user.invalid.username: 'Érvénytelen felhasználónév.'
 password.too.short: 'A jelszónak legalább %length% hosszúságúnak kell lennie.'
 passwords.dont.match: 'A jelszavak nem egyeznek.'
 key.tab: Tab
