--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -49,6 +49,7 @@ theme: Tema
 timezone: 'Fuso Orario'
 user.confirm.delete: 'Eliminare questo account?'
 user.conflict.username: 'Nome utente già utilizzato.'
+user.invalid.username: 'Nome utente non valido.'
 password.too.short: 'La password deve essere almeno lunga %length% caratteri.'
 passwords.dont.match: 'Le password non coincidono.'
 key.tab: Tab
