--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -49,6 +49,7 @@ theme: テーマ
 timezone: タイムゾーン
 user.confirm.delete: アカウントを削除してよろしいですか？
 user.conflict.username: 入力されたユーザーの名前は既に存在しています。
+user.invalid.username: 無効なユーザー名です。
 password.too.short: 'パスワードは最低 %length% 文字以上である必要があります。'
 passwords.dont.match: パスワードが一致しません。
 key.tab: Tab
