404 error page translated

--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -17,6 +17,7 @@ button.unlock: Freischalten
 button.export: Exportieren
 button.import: Importieren
 required: erforderlich
+error.not_found: 'Anhang existiert nicht oder ist gelöscht worden.'
 security.log_in: Anmelden
 security.log_out: Abmelden
 security.remember_me: 'Angemeldet bleiben'
