--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -17,6 +17,7 @@ button.unlock: Odblokuj
 button.export: Eksportuj
 button.import: Import
 required: wymagany
+error.not_found: 'Strona do której próbujesz się dostać nie istnieje lub została usunięta.'
 security.log_in: Logowanie
 security.log_out: Wyloguj
 security.remember_me: 'Pozostań zalogowany'
