--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -17,6 +17,7 @@ button.unlock: Отключено
 button.export: Изнеси
 button.import: Внасям
 required: изискван
+error.not_found: 'Несъществуваща или преместена страница.'
 security.log_in: Вход
 security.log_out: Изход
 security.remember_me: 'Запомни ме'
