--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -17,6 +17,7 @@ button.unlock: Odemknout
 button.export: Exportovat
 button.import: Importovat
 required: povinný
+error.not_found: 'Stránka, kterou se snažíte zobrazit, neexistuje nebo byla smazána.'
 security.log_in: 'Přihlásit se'
 security.log_out: Odhlásit
 security.remember_me: 'Zůstat přihlášený'
