--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -17,6 +17,7 @@ button.unlock: ロック解除
 button.export: エクスポート
 button.import: インポート
 required: 必須
+error.not_found: アクセスしようとしたページは存在しないか削除されています。
 security.log_in: ログイン
 security.log_out: 終了
 security.remember_me: ログインを維持
