--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -17,6 +17,7 @@ button.unlock: Descuie
 button.export: Exporta
 button.import: Importa
 required: obligatoriu
+error.not_found: 'Pagina pe care doriți să o accesați nu există sau a fost ștearsă.'
 security.log_in: Autentificare
 security.log_out: Iesire
 security.remember_me: 'Păstrează autentificarea'
