--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -18,6 +18,7 @@ button.export: Exporteer
 button.import: Importeer
 required: vereist
 error.not_found: 'De pagina die u probeerde te benaderen bestaat niet of is verwijderd.'
+error.not_authorized: 'Het is u niet toegestaan deze pagina te raadplegen.'
 security.log_in: Inloggen
 security.log_out: Uitloggen
 security.remember_me: 'Blijf ingelogd'
