--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -18,6 +18,7 @@ button.export: Export
 button.import: Import
 required: required
 error.not_found: 'The page you were trying to access doesn''t exist or has been removed.'
+error.not_authorized: 'You are not authorized to access this page.'
 security.log_in: 'Log in'
 security.log_out: 'Log out'
 security.remember_me: 'Remember me'
