--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -18,6 +18,7 @@ button.export: Exportar
 button.import: Importar
 required: obrigatório
 error.not_found: 'A página que você está tentando acessar não existe ou foi excluída.'
+error.not_authorized: 'Você não está autorizado a acessar esta página.'
 security.log_in: Logar
 security.log_out: Deslogar
 security.remember_me: 'Permanecer logado'
