--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -52,8 +52,12 @@ timezone: 'Времева зона'
 user.confirm.delete: 'Сигурен ли сте че искате да изтриете този акаунт?'
 user.conflict.username: 'Акаунт с въведенето потребителско име вече съществува.'
 user.invalid.username: 'Невалидно потребителско име.'
-password.too.short: 'Паролата трябва да е най-малко с %length% символ дължина.'
-passwords.dont.match: 'Паролите не са еднакви.'
+password.too_short: 'Паролата трябва да е най-малко с %length% символ дължина.'
+passwords.dont_match: 'Паролите не са еднакви.'
+password.changed: 'Паролата е успешно променена.'
+password.cant_change: 'Този профил е с външен метод за оторизация. Невъзможна смяна на паролата.'
+security.forgot_password: 'Забравена парола'
+security.forgot_password.email_sent: 'Изпратен ви е e-mail с инструкции за избор на нова парола.'
 key.tab: Tab
 key.space: Space
 comma: Comma
