--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -52,8 +52,12 @@ timezone: Timezone
 user.confirm.delete: 'Are you sure you want delete this account?'
 user.conflict.username: 'Account with entered user name already exists.'
 user.invalid.username: 'Invalid user name.'
-password.too.short: 'Password should be at least %length% characters length.'
-passwords.dont.match: 'Passwords do not match.'
+password.too_short: 'Password should be at least %length% characters length.'
+passwords.dont_match: 'Passwords do not match.'
+password.changed: 'Password was successfully updated.'
+password.cant_change: 'This account uses an external authentication source. Impossible to change the password.'
+security.forgot_password: 'Forgot password'
+security.forgot_password.email_sent: 'An email with instructions to choose a new password has been sent to you.'
 key.tab: Tab
 key.space: Space
 comma: Comma
