--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -52,8 +52,12 @@ timezone: 'Zona horaria'
 user.confirm.delete: '¿Está seguro de eliminar esta cuenta?'
 user.conflict.username: 'Ya existe una cuenta con ese nombre de usuario.'
 user.invalid.username: 'Nombre de usuario inválido.'
-password.too.short: 'La contraseña debe tener una logintud mínima de %length% caracteres.'
-passwords.dont.match: 'Las contraseñas no coinciden.'
+password.too_short: 'La contraseña debe tener una logintud mínima de %length% caracteres.'
+passwords.dont_match: 'Las contraseñas no coinciden.'
+password.changed: 'Contraseña modificada correctamente.'
+password.cant_change: 'Esta cuenta utiliza una fuente de autenticación externa. No es posible cambiar la contraseña.'
+security.forgot_password: '¿Olvidaste la contraseña?'
+security.forgot_password.email_sent: 'Se le ha enviado un correo con instrucciones para elegir una nueva contraseña.'
 key.tab: Tab
 key.space: Space
 comma: Comma
