--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -52,8 +52,12 @@ timezone: 'Fuso Orario'
 user.confirm.delete: 'Eliminare questo account?'
 user.conflict.username: 'Nome utente già utilizzato.'
 user.invalid.username: 'Nome utente non valido.'
-password.too.short: 'La password deve essere almeno lunga %length% caratteri.'
-passwords.dont.match: 'Le password non coincidono.'
+password.too_short: 'La password deve essere almeno lunga %length% caratteri.'
+passwords.dont_match: 'Le password non coincidono.'
+password.changed: 'La password è stata aggiornata.'
+password.cant_change: 'Questo utente utilizza un metodo di autenticazione esterno. Impossibile cambiare la password.'
+security.forgot_password: 'Password dimenticata'
+security.forgot_password.email_sent: 'Ti è stata spedita una email con le istruzioni per cambiare la password.'
 key.tab: Tab
 key.space: Space
 comma: Comma
