--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -52,8 +52,12 @@ timezone: 'Strefa czasowa'
 user.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrane konto?'
 user.conflict.username: 'Wprowadzona nazwa konta już istnieje.'
 user.invalid.username: 'Nieprawidłowa nazwa użytkownika.'
-password.too.short: 'Hasło powinno mieć co najmniej %length% znaków.'
-passwords.dont.match: 'Hasła nie są identyczne.'
+password.too_short: 'Hasło powinno mieć co najmniej %length% znaków.'
+passwords.dont_match: 'Hasła nie są identyczne.'
+password.changed: 'Hasło prawidłowo zmienione.'
+password.cant_change: 'To konto ma zewnętrzne źródło uwierzytelniania. Nie możesz zmienić hasła.'
+security.forgot_password: 'Zapomniane hasło'
+security.forgot_password.email_sent: 'E-mail z instrukcjami zmiany hasła został wysłany do Ciebie.'
 key.tab: Tab
 key.space: Space
 comma: Comma
