--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -52,8 +52,12 @@ timezone: 'Часовой пояс'
 user.confirm.delete: 'Вы уверены, что хотите удалить эту учетную запись?'
 user.conflict.username: 'Учетная запись с таким именем пользователя уже существует.'
 user.invalid.username: 'Неверное имя пользователя.'
-password.too.short: 'Пароль должен содержать как минимум %length% символов.'
-passwords.dont.match: 'Пароли не совпадают.'
+password.too_short: 'Пароль должен содержать как минимум %length% символов.'
+passwords.dont_match: 'Пароли не совпадают.'
+password.changed: 'Пароль успешно обновлён.'
+password.cant_change: 'Для данной учётной записи используется источник внешней аутентификации. Невозможно изменить пароль.'
+security.forgot_password: 'Восстановление пароля'
+security.forgot_password.email_sent: 'Вам отправлено письмо с инструкциями по выбору нового пароля.'
 key.tab: Табуляция
 key.space: Пробел
 comma: Запятая
