--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -58,12 +58,12 @@ password.changed: 'A jelszó módosítása megtörtént.'
 password.cant_change: 'A fiók külső azonosítási forrást használ. A jelszó megváltoztatása nem lehetséges.'
 security.forgot_password: 'Elfelejtett jelszó'
 security.forgot_password.email_sent: 'Egy e-mail üzenetben postáztunk Önnek egy leírást az új jelszó beállításáról.'
-key.tab: Tab
-key.space: Space
-comma: Comma
-colon: Colon
-semicolon: Semicolon
-vertical_line: 'Vertical line'
+key.tab: ~
+key.space: ~
+comma: ~
+colon: ~
+semicolon: ~
+vertical_line: ~
 file: Fájl
 size: Méret
 delimiter: Mezőelválasztó
